tests/paczka1/fuzzy1/63690097.err
Error in line 6: ZNCIpyZB S400 -3,7
Error in line 9: Ze8zn47oI S472 23,6
Error in line 13: gA3Fy5Jg S182 59,60
Error in line 10: gA3Fy5Jg S400 37,7
Error in line 1: ZNCIpyZB S400 58,0
Error in line 19: gA3Fy5Jg S472 67,2
Error in line 26: 1ZLoSYru S182 21,2
